# whdp

./: Cargo.toml  README.md  sonar-project.properties
src/main/: error.rs  lib.rs  method.rs  request.rs  response.rs  status.rs  util.rs  version.rs
src/resources/: request.txt  response.txt
