[package]
name = "whdp"
version = "1.1.10"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards hypermedia document parser"
readme = "README.md"
repository = "https://github.com/AdrisGithub/whdp"
license = "GPL-2.0-or-later"
exclude = ["src/resources", ".github/", "sonar-project.properties"]


[lib]
path = "src/main/lib.rs"

[dependencies]
wjp = "1.0.2"